# voiceclean

./: .gitignore  .readthedocs.yaml  ARTICLE_DRAFT.md  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: background.md  configuration.md  getting-started.md  how-aec-works.md  index.md  pipecat-guide.md
docs/api/: aec.md  pipecat.md  vad.md  voiceclean.md
voiceclean/: __init__.py  aec.py  denoise.py  pipeline.py  resample.py  vad.py
voiceclean.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
voiceclean/pipecat/: __init__.py  filter.py  vad.py
