[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceclean"
version = "0.2.0"
description = "Real-time AEC, noise suppression, and VAD for voice agents — wraps SpeexDSP, RNNoise, and Silero VAD."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SortString Solutions" },
]
keywords = ["aec", "echo-cancellation", "noise-suppression", "vad", "voice-agent", "telephony"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "numpy",
    "soxr",
]

[project.optional-dependencies]
rnnoise = ["pyrnnoise>=0.4"]
silero = ["onnxruntime>=1.16"]
pipecat = ["pipecat-ai>=1.0"]
all = ["voiceclean[rnnoise,silero,pipecat]"]

[project.urls]
Homepage = "https://github.com/sortstring/voiceclean"

[tool.setuptools.packages.find]
include = ["voiceclean*"]
