[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceclean"
version = "0.3.3"
description = "Real-time acoustic echo cancellation (AEC) and voice activity detection (VAD) for voice agents. Pure Python + numpy — no external C libraries."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SortString Solutions" },
]
keywords = ["aec", "echo-cancellation", "noise-suppression", "vad", "voice-agent", "telephony"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "numpy",
    "soxr",
]

[project.optional-dependencies]
silero = ["onnxruntime>=1.16"]
pipecat = ["pipecat-ai>=1.0"]
all = ["voiceclean[silero,pipecat]"]

[project.urls]
Homepage = "https://github.com/sortstring/voiceclean"
Documentation = "https://voiceclean.readthedocs.io"
Repository = "https://github.com/sortstring/voiceclean"
Issues = "https://github.com/sortstring/voiceclean/issues"

[tool.setuptools.packages.find]
include = ["voiceclean*"]
